# agent-memory-that-works

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration_request.md
.github/workflows/: ci.yml
agentmem/: __init__.py  __main__.py  consolidator.py  mcp_server.py  memory.py  models.py  retriever.py  store.py
examples/: basic_usage.py  langchain_example.py
src/: cli.ts  dedup.ts  extractor.ts  index.ts  memory.ts  retrieval.ts
src/backends/: file.ts  sqlite.ts  types.ts
tests/: memory.test.ts  test_mcp.py  test_memory.py
