[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmem"
version = "0.1.0"
description = "Agent memory that actually works — human-like learning, forgetting, and retrieval for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Krrish Mittal" }]
keywords = ["ai", "agents", "memory", "llm", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
agentmem = "agentmem.mcp_server:main"

[project.urls]
Homepage = "https://github.com/phoenix-assistant/agent-memory-that-works"
Issues = "https://github.com/phoenix-assistant/agent-memory-that-works/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
